# users-api

./: .coverage  .gitignore  Dockerfile  README.md  alembic.ini  coverage.xml  docker-compose.yaml  pyproject.toml  sonar-project.properties
alembic/versions/: 8f0e9c01e9a2_create_users_table.py  a7b9bf5a6fde_alter_email_users_table.py
app/: main.py
app/application/: authenticate_user.py  find_user_by_id.py  register_user.py
app/configuration/: config.py  database.py
app/domain/: entities.py  exceptions.py
app/infrastructure/orm/: entities_orm.py  mappers.py
app/infrastructure/repository/: user_command_repository.py
app/infrastructure/routers/: authentication.py  exception_handlers.py  users.py
app/utils/: hashing.py  token_generator.py
tests/application/: test_authenticate_user.py  test_find_user_by_id.py  test_register_user.py
tests/infrastructure/repository/: test_integration_user_repository.py  test_user_repository.py
